[package]
name = "bee_nest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.11"
polodb_core = "5.1"
